--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,14 @@ members = [
   "bullg/bullg-logger",
   "bullg/bullg-gateway"
 ]
-resolver = "2"
+resolver = "3"
 
 [workspace.metadata]
 app-name = "BullG"
 app-version = "1.0.0"
 
 [workspace.package]
-edition = "2021"
+edition = "2024"
 license = "MIT"
 authors = ["VIKSHRO INDIA <contact@vikshro.in>"]
 homepage = "https://vikshro.in"
@@ -29,11 +29,11 @@ readme = "README.md"
 [workspace.dependencies]
 # Common utils
 anyhow = "1"
-thiserror = "1"
+thiserror = "2"
 serde = { version = "1", features = ["derive"] }
+serde_yml = "0.0.12"
 serde_json = "1"
-serde_yaml = "0.9"
-toml = "0.8"
+toml = "0.9"
 clap = { version = "4", features = ["derive"] }
 regex = "1"
 uuid = { version = "1", features = ["v4", "serde"] }
@@ -51,14 +51,14 @@ rmp-serde = "1"
 
 # Networking
 tokio = { version = "1", features = ["full","rt-multi-thread", "macros", "signal", "sync", "time"] }
-hyper = { version = "1", features = ["full"] }
+hyper = { version = "1.7", features = ["full"] }
 hyper-util = { version = "0.1", features = ["tokio"] }
 http = "1"
 http-body-util = "0.1"
 bytes = "1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
-tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
+tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
+tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
 rustls = { version = "0.23", default-features = false, features = ["logging", "std"] }
 rustls-pemfile = "2"
 
@@ -72,9 +72,9 @@ tracing-opentelemetry = { version = "0.31", features = ["metrics"] }
 opentelemetry-stdout = "0.30"
 
 # Storage
-heed = "0.20"
+heed = "0.22"
 
 # Plugin runtimes
-pyo3 = { version = "0.22", features = ["auto-initialize"] }
-rquickjs = { version = "0.6", features = ["full"] }
+pyo3 = { version = "0.25", features = ["auto-initialize"] }
+rquickjs = { version = "0.9", features = ["full"] }
 libloading = "0.8"
