--- a/bullg/bullg-core/Cargo.toml
+++ b/bullg/bullg-core/Cargo.toml
@@ -1,8 +1,18 @@
 
 [package]
 name = "bullg-core"
-version = "1.0.0"
-edition = "2024"
+version = {workspace = true}
+edition = {workspace = true}
+authors = {workspace = true}
+description = "BullG Core Library for shared functionality across BullG projects."
+license = {workspace = true}
+repository = {workspace = true}
+homepage = {workspace = true}
+documentation = {workspace = true}
+keywords = {workspace = true}
+categories = {workspace = true}
+readme = {workspace = true}
+
 
 [dependencies]
 serde = { workspace = true }
