--- a/bullg/bullg-gateway/Cargo.toml
+++ b/bullg/bullg-gateway/Cargo.toml
@@ -1,8 +1,18 @@
 
 [package]
 name = "bullg-gateway"
-version = "1.0.0"
-edition = "2024"
+version = {workspace = true}
+edition = {workspace = true}
+authors = {workspace = true}
+description = "Gateway for BullG"
+license = {workspace = true}
+repository = {workspace = true}
+homepage = {workspace = true}
+documentation = {workspace = true}
+keywords = {workspace = true}
+categories = {workspace = true}
+readme = {workspace = true}
+
 
 [dependencies]
 anyhow = { workspace = true }
