--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ moka = { version = "0.12", features = ["sync"] }
 parking_lot = "0.12"
 tempfile = "3"
 rmp-serde = "1"
+chrono = "0.4"
 
 # Networking
 tokio = { version = "1", features = ["full","rt-multi-thread", "macros", "signal", "sync", "time"] }
