--- a/bullg/bullg-core/Cargo.toml
+++ b/bullg/bullg-core/Cargo.toml
@@ -17,6 +17,21 @@ readme = {workspace = true}
 [dependencies]
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_yml = { workspace = true }
+toml = { workspace = true }
 uuid = { workspace = true }
 anyhow = { workspace = true }
-thiserror = { workspace = true }
+http = { workspace = true }
+bytes = { workspace = true }
+reqwest = { workspace = true }
+form_urlencoded = { workspace = true }
+tokio = { workspace = true }
+multer = { workspace = true }
+futures-util = { workspace = true }
+heed = { workspace = true }
+dashmap = { workspace = true }
+rmp-serde = { workspace = true }
+rustpython-vm = { workspace = true }
+boa_engine = { workspace = true }
+rhai = { workspace = true }
+fxhash = { workspace = true }
