--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,7 +41,7 @@ serde = { version = "1", features = ["derive"] }
 serde_yml = "0.0.12"
 serde_json = "1"
 toml = "0.9"
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4.5", features = ["derive"] }
 regex = "1"
 uuid = { version = "1", features = ["v4", "serde"] }
 time = "0.3"
@@ -61,6 +61,9 @@ parking_lot = "0.12"
 tempfile = "3"
 rmp-serde = "1"
 chrono = "0.4"
+# Parallel CPU work
+rayon = "1.8"
+async-trait = "0.1"
 
 # Networking
 tokio = { version = "1", features = ["full","rt-multi-thread", "macros", "signal", "sync", "time"] }
@@ -74,6 +77,7 @@ tokio-tungstenite = { version = "0.27", features = ["rustls-tls-webpki-roots"] }
 tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
 form_urlencoded = "1.2.2"
 multer = "3.1"
+matchit = { version = "0.8"}
 #multipart = "0.18.0"
 rustls = { version = "0.23", default-features = false, features = ["logging", "std"] }
 rustls-pemfile = "2"
@@ -92,9 +96,12 @@ heed = "0.22"
 
 # Plugin runtimes
 fxhash = "0.2.1"
-pyo3 = "0.25.1"
+pyo3 = {version = "0.25", features = ["auto-initialize"]}
 #rustpython-vm = { version = "0.4", default-features = false, features = ["serde"] }
 #rustpython-compiler = "0.4"
 boa_engine = "0.20"
 rhai = { version = "1", features = ["serde"] }
 libloading = "0.8"
+
+[profile.dev]
+incremental = false
