--- a/src/bullg-core/Cargo.toml
+++ b/src/bullg-core/Cargo.toml
@@ -19,6 +19,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yml = { workspace = true }
 toml = { workspace = true }
+regex = { workspace = true }
 uuid = { workspace = true }
 anyhow = { workspace = true }
 http = { workspace = true }
@@ -26,12 +27,15 @@ bytes = { workspace = true }
 reqwest = { workspace = true }
 form_urlencoded = { workspace = true }
 tokio = { workspace = true }
+rayon = { workspace = true }
+#async-trait = { workspace = true }
+matchit = { workspace = true }
 multer = { workspace = true }
 futures-util = { workspace = true }
 heed = { workspace = true }
 dashmap = { workspace = true }
 rmp-serde = { workspace = true }
-pyo3 = { workspace = true }
+pyo3 = { workspace = true, features = ["auto-initialize"] }
 boa_engine = { workspace = true }
 rhai = { workspace = true }
 fxhash = { workspace = true }
